--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,3 +12,7 @@
 @import "productscard";
 @import "productsdialogs";
 @import "createprocessdialog";
+@import "datepicker";
+@import "menu";
+@import "accounts";
+@import "oldstyles/styles";
