--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 
 @import "oldstyles/styles";
 @import "layout";
+@import "navigation";
 @import "headers";
 @import "input";
 @import "card";
@@ -16,3 +17,4 @@
 @import "datepicker";
 @import "menu";
 @import "accounts";
+@import "taskattribute"
