--- a/src/styles/navsection.scss
+++ b/src/styles/navsection.scss
@@ -2,13 +2,18 @@
 	display: flex;
 	flex-direction:row;
 	flex-grow: 100;
+	margin-bottom: 150px;
 
 	&>div {
-	margin: 100px 80px 0px 64px;
+	margin: 0px 80px 0px 64px;
 	flex: 7;
 
 		&>.card {
 			height: 100%;
+		}
+
+		&:last-child {
+			margin-right: 0px;
 		}
 	}
 
@@ -23,6 +28,6 @@
 	}
 
 	.nav-section-list {
-		margin-top: 132px;
+		margin-top: 32px;
 	}
 }
