--- a/src/styles/oldstyles/layout.scss
+++ b/src/styles/oldstyles/layout.scss
@@ -27,150 +27,150 @@ img:before {
 }
 
 
-.d-nav{
-  flex: 0 0 13em;
-  transition: flex 0.3s;
-  border-right: 1px solid #EAEAEA;
-}
+// .d-nav{
+//   flex: 0 0 13em;
+//   transition: flex 0.3s;
+//   border-right: 1px solid #EAEAEA;
+// }
 
-.pushout {
-  width: 32px;
-  height: 32px;
-  box-shadow: $shadow-1;
-  border-radius: 100%;
-  position: fixed;
-  background-color: white;
-  top: 5px;
-  left: 8px;
-}
+// .pushout {
+//   width: 32px;
+//   height: 32px;
+//   box-shadow: $shadow-1;
+//   border-radius: 100%;
+//   position: fixed;
+//   background-color: white;
+//   top: 5px;
+//   left: 8px;
+// }
 
-.d-nav.littleNav {
-  flex: 0 0 16px;
-  &>div.bar {
-    display: none;
-  }
-}
+// .d-nav.littleNav {
+//   flex: 0 0 16px;
+//   &>div.bar {
+//     display: none;
+//   }
+// }
 
-.d-ads {
-	//flex: 0 0 20em;
-}
+// .d-ads {
+// 	//flex: 0 0 20em;
+// }
 
-.d-nav {
-  /* put the nav on the left */
-  order: -1;
-  //background-color: #505256;
-  height: 100vh;
- 	display: flex;
- 	flex-direction: column;
- 	color: rgba(98,98,98,0.56);
+// .d-nav {
+//   /* put the nav on the left */
+//   order: -1;
+//   //background-color: #505256;
+//   height: 100vh;
+//  	display: flex;
+//  	flex-direction: column;
+//  	color: rgba(98,98,98,0.56);
 
-  .bar {
-    position: relative;
-    top: 0;
-  }
+//   .bar {
+//     position: relative;
+//     top: 0;
+//   }
 
-	ul { margin: 0 auto; }
+// 	ul { margin: 0 auto; }
 
-	li {
-		list-style-type: none;
+// 	li {
+// 		list-style-type: none;
 
-		a, a:hover, a:visited {
-			display: block;
-			line-height: $navbar-height;
-			text-decoration: none;
-			color: rgba(98,98,98,0.56);
-			margin-left: 16px;
+// 		a, a:hover, a:visited {
+// 			display: block;
+// 			line-height: $navbar-height;
+// 			text-decoration: none;
+// 			color: rgba(98,98,98,0.56);
+// 			margin-left: 16px;
 
-			&.active {
-				background-color: $primary;
-				color: white;
-				width: 100%;
-				padding-left: 16px;
-				margin-left: 0px;
+// 			&.active {
+// 				background-color: $primary;
+// 				color: white;
+// 				width: 100%;
+// 				padding-left: 16px;
+// 				margin-left: 0px;
 
-				&, &:hover, &:visited {
-					color: white;	
-				}
-			}
-		}
-	}
+// 				&, &:hover, &:visited {
+// 					color: white;	
+// 				}
+// 			}
+// 		}
+// 	}
 
-}
+// }
 
-i.material-icons {
-	color: rgba(0,0,0,0.5);
+// i.material-icons {
+// 	color: rgba(0,0,0,0.5);
 
 
-	&:hover {
-		color: blue;
-	}
+// 	&:hover {
+// 		color: blue;
+// 	}
 
-}
+// }
 
-.loading {
-	display: none;
-}
+// .loading {
+// 	display: none;
+// }
 
-.noresults {
-	margin-top: 32px;
-	text-align: center;
-	span {
-		font-size: 18px;
-		color: rgba(0,0,0,0.3);
-		text-align: middle;
-	}
+// .noresults {
+// 	margin-top: 32px;
+// 	text-align: center;
+// 	span {
+// 		font-size: 18px;
+// 		color: rgba(0,0,0,0.3);
+// 		text-align: middle;
+// 	}
 
-}
+// }
 
-div[data-react-toolbox="dropdown"] {
+// div[data-react-toolbox="dropdown"] {
 
-  &>div {
-    padding: 0;
-  }
+//   &>div {
+//     padding: 0;
+//   }
 
-  input {
-    font-size: 14px;
-  }
-}
+//   input {
+//     font-size: 14px;
+//   }
+// }
 
-.d-nav div[data-react-toolbox="dropdown"] {
-	&>div {
-		padding: 0px;
-		margin: 0px;
-	}
+// .d-nav div[data-react-toolbox="dropdown"] {
+// 	&>div {
+// 		padding: 0px;
+// 		margin: 0px;
+// 	}
 
-	ul {
-		color: rgba(0,0,0,0.6)
-	}
+// 	ul {
+// 		color: rgba(0,0,0,0.6)
+// 	}
 
-	input {
-		margin: 0px;
-		padding: 0px;
-		padding-top: 4px;
-		outline: none;
-		border: none;
-	}
-}
+// 	input {
+// 		margin: 0px;
+// 		padding: 0px;
+// 		padding-top: 4px;
+// 		outline: none;
+// 		border: none;
+// 	}
+// }
 
-.d-nav div[data-react-toolbox="dropdown"] input {
-  color: rgba(255,255,255,0.56)
-}
+// .d-nav div[data-react-toolbox="dropdown"] input {
+//   color: rgba(255,255,255,0.56)
+// }
 
-.d-top {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 54px;
-  min-height: 54px;
-  background-color: white;
-  box-shadow: $shadow-0;
-  line-height: 54px;
-  display: flex;
-  flex-direction: row;
-  padding: 0px 16px;
+// .d-top {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 54px;
+//   min-height: 54px;
+//   background-color: white;
+//   box-shadow: $shadow-0;
+//   line-height: 54px;
+//   display: flex;
+//   flex-direction: row;
+//   padding: 0px 16px;
 
-  .nav-brand {
-    flex: 1;
-  }
-}
+//   .nav-brand {
+//     flex: 1;
+//   }
+// }
