--- a/src/styles/taskattribute.scss
+++ b/src/styles/taskattribute.scss
@@ -34,6 +34,9 @@
 
 	& > .task-attribute-name {
 		flex: 1;
+		text-overflow: ellipsis;
+		overflow: hidden;
+    white-space: nowrap;
 	}
 
 	& > .task-attribute-value {
@@ -73,5 +76,5 @@
 
 .task-attribute-test {
 	margin-left: 150px;
-	max-width: 500px;
+	max-width: 300px;
 }
