--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,4 +17,5 @@
 @import "datepicker";
 @import "menu";
 @import "accounts";
-@import "taskattribute"
+@import "taskattribute";
+@import "taskflag";
