--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import "products";
 @import "productscard";
 @import "productsdialogs";
+@import "processattribute";
 @import "createprocessdialog";
 @import "datepicker";
 @import "menu";
