--- a/src/styles/paginatedtable.scss
+++ b/src/styles/paginatedtable.scss
@@ -11,7 +11,7 @@
 		text-align: right;
 		font-size: 11px;
 		line-height: 12px;
-		margin-bottom: 4px;
+		margin-top: 8px;
 		color: rgba(0,0,0,0.3);
 
 		&>div, &>i {
