--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,9 +1,9 @@
-$sans-stack: 'Camphor', 'Interface', 'Helvetica';
+$sans-stack:'Interface', 'Helvetica';
 $light-gray: rgba(0,0,0,0.1);
 $theme-color: #2198EE; //42AFFF;
 $dark-theme-color: #0068B4;
 $baseline: 8px;
-$nav-width: 150px;
+$nav-width: 144px;
 
 html, body {
 	width: 100%;
@@ -30,7 +30,6 @@ html, body {
 
 .application-content {
 	padding-left: $nav-width;
-	margin-right: 64px;
 	flex-grow: 1;
 }
 
