--- a/src/styles/oldstyles/styles.scss
+++ b/src/styles/oldstyles/styles.scss
@@ -6,7 +6,7 @@
 @import "processtile";
 @import "labelPrinter";
 @import "spinner";
-@import "inventory2";
+//@import "inventory2";
 @import "task";
 @import "activity";
 @import "dialog";
