--- a/src/styles/accounts.scss
+++ b/src/styles/accounts.scss
@@ -14,11 +14,14 @@
 	margin: 12px;
 	cursor: pointer;
 
-	.name {
+	span.name {
+		display:block;
 		font-weight: 500;
+		font-size: 14px;
 	}
 
-	.username {
+	span.username {
+		display:block;
 		color: $theme-color;
 	}
 }
