--- a/src/styles/goals.scss
+++ b/src/styles/goals.scss
@@ -1,36 +1,110 @@
+.card-header {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	letter-spacing: 5%;
+	color: #4f4f4f;
+	padding-top: 3px;
+	padding-bottom: 4px;
+	text-transform: uppercase;
+}
+
 .goals {
-	width: 70%;
-	padding: 36px;
+	font-size: 14px;
+	line-height: 16px;
+	color: black;
+
+	.goals-bottom-bar {
+		padding-top: 12px;
+		padding-bottom: 8px;
+		display: flex;
+		width: 100%;
+		background-color: #fafafa;
+
+		span {
+			font-size: 14px;
+			line-height: 19px;
+			padding-top: 3px;
+			padding-bottom: 4px;
+		}
+
+		.left {
+			flex: 1;
+		}
+
+		.right {
+			white-space: nowrap;
+			flex: 0;
+
+			button {
+				color: $theme-color;
+				background-color: rgba(255,255,255,0);
+				text-transform:uppercase;
+				font-weight: 600;
+				font-size: 12px;
+				line-height: 14px;
+				letter-spacing: 5%;
+				padding-top: 5px;
+				padding-bottom: 4px;
+				-webkit-font-smoothing: antialiased;
+			}
+		}
+	}
 
 	.goal {
-		padding: 20px 0;
+		padding: 8px 0 8px 0;
 
 		.goal-details {
 			display: flex;
+			button {
+				padding: 0;
+				i {
+					font-size: 16px;
+					line-height: 16px;
+					vertical-align: top;
+					padding-top: 0px;
+					padding-bottom: 4px;
+				}
+				visibility: hidden;
+			}
 
 			.goal-details-left {
 				display: flex;
-				align-items: center;
-				flex: 1;
-
-				.product {
-					font-weight: 700;
-					margin-right: 8px;
-				}
+				flex: 1;	
+				padding-top: 3px;
+				padding-bottom: 4px;
+				vertical-align: middle;
 			}
 
 
 			.goal-details-right {
-				visibility: hidden;
+				font-size:12px;
+				line-height: 14px;
+				letter-spacing: 5%;
+				text-transform: uppercase;
+				padding-top: 5px;
+				padding-bottom: 4px;
+				color: #828282;
+
+				.blue {
+					color: $theme-color;
+				}
 			}
 
 		}
 
+		&:hover {
+			button {
+				visibility: visible;
+			}
+		}
+
 		.goal-whole-bar {
 			display: flex;
-			height: 20px;
+			height: 28px;
+			margin-top: 8px;
+			margin-bottom: 4px;
 			background-color: rgba(0,0,0,0.1);
-			line-height: 20px;
 			border-radius: 4px;
 			text-align: right;
 
