--- a/src/styles/oldstyles/inventory2.scss
+++ b/src/styles/oldstyles/inventory2.scss
@@ -211,11 +211,16 @@ div.zero-state {
 
 .page {
     &.mini {
-    background-color: white;
-    padding: 20px 16px;
-    border-radius: 4px;
-    box-shadow: $shadow-0;
-    margin: 50px auto;
+
+    div.content {
+      background-color: white;
+      padding: 20px 16px;
+      border-radius: 4px;
+      box-shadow: $shadow-0;
+      margin: 50px auto;
+    }
+
+
   }
 }
 
