--- a/src/styles/headers.scss
+++ b/src/styles/headers.scss
@@ -14,3 +14,14 @@ h2 {
 	font-weight: 100;
 	color: rgba(0,0,0,0.89);
 }
+
+h3 {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	letter-spacing: 0.7px;
+	color: #4f4f4f;
+	padding-top: 3px;
+	padding-bottom: 4px;
+	text-transform: uppercase;
+}
