--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -6,6 +6,8 @@
 	left: 0;
 	height: 100%;
 	width: $nav-width;
+	display: flex;
+	flex-direction: column;
 
 	color: rgba(255,255,255, 0.4);
 	font-size: 13px;
@@ -75,6 +77,25 @@
 
 	.nav-team {
 		margin: 0 36px;
+	}
+}
+
+div .bar { 
+	flex: 1;
+}
+
+.nav-feedback {
+	flex: 0;
+	align-items: flex-end;
+	margin: 16px;
+	font-size: 12px;
+	line-height: 18px;
+	span { 
+		display: block; 
+	}
+	
+	a {
+		text-decoration: underline;
 	}
 }
 
