--- a/src/index.css
+++ b/src/index.css
@@ -1563,5 +1563,17 @@ div.zero-state {
         color: white;
         text-align: right;
         background-color: rgba(0, 0, 0, 0.2); }
+  .team-members .create-member .buttons {
+    display: flex;
+    justify-content: flex-end; }
+  .team-members .create-member h2 {
+    margin-bottom: 16px; }
+  .team-members .create-member > div {
+    display: flex;
+    margin-bottom: 8px; }
+    .team-members .create-member > div label {
+      flex: 1; }
+    .team-members .create-member > div input {
+      flex: 3; }
 
 /*# sourceMappingURL=index.css.map */
