--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,3 +24,15 @@
 @import "inventory";
 @import "goals";
 @import "account";
+
+.lesmis {
+	.links line {
+	  stroke: #999;
+	  stroke-opacity: 0.6;
+	}
+
+	.nodes circle {
+	  stroke: #fff;
+	  stroke-width: 1.5px;
+	}
+}
