--- a/src/styles/account.scss
+++ b/src/styles/account.scss
@@ -75,31 +75,53 @@
 	background-color: rgba(187,187,187,0.09);
 	-webkit-font-smoothing: antialiased;
 	border-radius: 4px;
-	padding: 16px;
 	margin-top: 10px;
 
 	.member {
-		margin-bottom: 10px;
+		padding: 8px 16px;
 		display: flex;
+		border-bottom: 1px solid rgba(0,0,0,0.05);
+		align-items: center;
 
+		// more button
+		i {
+			flex: 0;
+			font-size: 16px;
+			line-height: 10px;
+			padding-left: 8px;
+			color: rgba(0,0,0,0.4);
+			cursor: pointer;
+		}
+
+		// spans
 		span {
 			display: block;
 			flex: 1;
 
-			&:last-child {
+			&.member-type {
 				flex: 0;
 				font-size: 10px;
 				line-height: 10px;
 				padding: 3px;
 				text-transform: uppercase;
-				letter-spacing: 0.2px;
+				letter-spacing: 0.4px;
 				border-radius: 2px;
 				color: white;
 				text-align: right;
 				background-color: rgba(0,0,0,0.2);
+
+				&.member-type-a {
+					background-color: rgba(0,0,0,0.4);
+				}
+
 			}
 
 		}
+	}
+
+	.add-new-member {
+		display: block;
+		padding: 8px 16px;
 	}
 
 	.create-member {
