styling on dialog box

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -86,4 +86,10 @@ button {
 		color: $theme-color;
 	}
 
+	&.link {
+		padding: 0;
+		background-color: rgba(0,0,0,0);
+		color: $theme-color;
+	}
+
 }
