--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -1,11 +1,11 @@
 input {
 	font-family: $sans-stack;
-	font-size: 12px;
+	font-size: 14px;
 	line-height: 16px;
 	border: 1px solid $light-gray;
 	border-radius: 4px;
-	height:32px;
-	padding: 0px 8px;
+	height:36px;
+	padding: 9px 8px 10px 8px;
 	outline: none;
 
 	&:focus {
@@ -28,4 +28,15 @@ textarea {
 	border-radius: 4px;
 	padding: 8px;
 	resize: none;
+}
+
+.Select-control {
+	outline: none;
+	border-radius: 4px;
+	border: 1px solid $light-gray;
+}
+
+.Select-placeholder {
+	padding-left: 8px;
+	font-size: 14px;
 }
