disabled create button if inputs are invalid

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import "headers";
 @import "input";
 @import "card";
+@import "button";
 @import "dialog";
 @import "navsection";
 @import "paginatedtable";
