--- a/src/index.css
+++ b/src/index.css
@@ -772,6 +772,9 @@ button {
     padding: 0;
     background-color: rgba(0, 0, 0, 0);
     color: #2198EE; }
+  button:disabled {
+    background-color: #c3c3c3;
+    color: #838383; }
 
 .dialog-header h2 {
   padding-top: 3px;
